@startuml
!theme plain
hide circle
hide methods

entity "Location" as loc {
*loc_id : SERIAL <<PK>>
address : TEXT
city : TEXT
is_open : BOOL
}

entity "Document" as doc {
*doc_id : SERIAL <<PK>>
#loc_id : INT <<FK>>
title : TEXT
issue_date : DATE
active_from : DATE <<o>>
expire_date : DATE <<o>>
is_denied : BOOL <<def:false>>
}

entity "Employee" as emp {
*emp_id : INT <<PK>>
#loc_id : INT <<FK>>
surname : TEXT
name : TEXT
birthday : DATE
shift : TEXT
position : ENUM[i]
salary : INT
phone : VARCHAR
}

entity "Menu" as menu {
*menu_id : SERIAL <<PK>>
title : VARCHAR
}

entity "LocMenu" as locMenu{
*menu_id : INT <<pk>>
*loc_id : INT <<pk>>
}

entity "Item" as item {
*item_id : INT <<PK>>
#menu_id : INT <<FK>>
title : VARCHAR
current_price : NUMERIC
recipe : TEXT <<o>>
}

entity "SoldOnDay" as sold {
*sold_id : SERIAL <<PK>>
#item_id : INT <<FK>> <<o>>
item_title : VARCHAR
loc_address : TEXT
city : TEXT
price : NUMERIC
amount : SMALLINT
date : DATE <<def:CURRENT_DATE>>
}

entity "EmployeeDoc" as empDoc {
*doc_id : int <<pk,FK>>
*emp_id : int <<pk,Fk>>
}

loc ||--|{ doc : "requires"
loc ||--|{ locMenu
locMenu }|--|| menu
loc ||--o{ emp : "has"
menu ||--|{ item : "includes"
item ||--o{ sold : "was"
doc ||--o{ empDoc
empDoc }o--|| emp

@enduml




